# xbox-project-helix-2027

./: 'src'-directory-structure.txt  .gitignore  README.md
docs/: architecture_zen6_rdna5.md  fsr_diamond_whitepaper.md  memory_crisis_mitigation.md
graphics_fsr_diamond/: CMakeLists.cmake
graphics_fsr_diamond/src/ai_upscaling/: DiamondFrameGen.cpp  TensorAccelerator.cpp
graphics_fsr_diamond/src/rendering/: MicroPolygonEngine.cpp  RayTracingCore.cpp
graphics_fsr_diamond/src/shaders/: fsr_diamond_pass.hlsl  memory_culling.hlsl
helix_dashboard_shell/: App.xaml.cs  HelixShell.csproj
helix_dashboard_shell/ViewModels/: ShellStateManager.cs  TelemetrySync.cs
helix_dashboard_shell/Views/: BootSequence.xaml  QuickResumeOverlay.xaml  UnifiedStorefront.xaml
kernel_microvisor/: Cargo.toml
kernel_microvisor/src/: main.rs
kernel_microvisor/src/cpu_scheduler/: pc_mode_toggle.rs  zen6_dispatcher.rs
kernel_microvisor/src/memory/: direct_storage_v2.rs  resilient_allocator.rs
scripts/: build_all.ps1  deploy_to_dev_kit.ps1
win_helix_bridge/: Makefile
win_helix_bridge/src/: bridge_core.cpp
win_helix_bridge/src/api_intercept/: Direct3D12_Hook.cpp  Win32_Shim.c
win_helix_bridge/src/input_mapping/: SeamlessControllerMap.cpp
